--- a/config/config/i3/config
+++ b/config/config/i3/config
@@ -53,7 +53,7 @@ bindsym $mod+Shift+Return exec kitty
 bindsym $mod+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec rofi -no-config -no-lazy-grab -show drun -modi drun -show-icons -theme 'everforest'
+bindsym $mod+d exec rofi -no-config -no-lazy-grab -show drun -modi drun -show-icons
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
