--- a/config/config/i3/config
+++ b/config/config/i3/config
@@ -46,8 +46,8 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec ghostty
-bindsym $mod+Shift+Return exec kitty
+bindsym $mod+Shift+Return exec ghostty
+bindsym $mod+Return exec kitty
 
 # kill focused window
 bindsym $mod+q kill
@@ -145,9 +145,9 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 
 
 mode "nixbook" {
-        bindsym p exec 'xterm -bg black /etc/nixbook/powerwash-i3.sh'
-        bindsym u exec 'xterm -bg black /etc/nixbook/update.sh'
-        bindsym s exec 'xterm -bg black /etc/nixbook/update_shutdown.sh'
+        bindsym p exec 'xterm -bg black /etc/nixbook-tile/powerwash-i3.sh'
+        bindsym u exec 'xterm -bg black /etc/nixbook-tile/update.sh'
+        bindsym s exec 'xterm -bg black /etc/nixbook-tile/update_shutdown.sh'
         # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
         bindsym Escape mode "default"
