--- a/config/config/i3/config
+++ b/config/config/i3/config
@@ -32,7 +32,7 @@ exec --no-startup-id xrandr --output Virtual-1 --mode 1920x1080
 exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
-set $refresh_i3status killall -SIGUSR1 i3status
+#set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
@@ -184,16 +184,19 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-	separator_symbol "::"
-  	workspace_min_width 10
-  	padding 5px 0 0 0
-		colors {
-			background #272e33FF
-			statusline #d3c6aa
-		}
-}
+#bar {
+#       status_command i3status
+#	separator_symbol "::"
+#  	workspace_min_width 10
+#  	padding 5px 0 0 0
+#		colors {
+#			background #272e33FF
+#			statusline #d3c6aa
+#		}
+#}
+
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+
 gaps inner 6
 gaps outer 4
 
