--- a/config/config/polybar/config.ini
+++ b/config/config/polybar/config.ini
@@ -2,8 +2,14 @@
 [bar/mybar]
 modules-left = i3
 modules-right = lan wlan filesystem cpu date
-tray-position = right
+
 font-0 = Noto Sans Mono:style=Regular
+
+[module/tray]
+type = internal/tray
+tray-position = right
+format-margin = 8px
+tray-spacing = 8px
 
 [colors]
 black = #000
