--- a/config/config/i3/config
+++ b/config/config/i3/config
@@ -195,7 +195,7 @@ bindsym $mod+r mode "resize"
 #		}
 #}
 
-exec_always --no-startup-id ~/.config/polybar/launch.sh
+exec_always --no-startup-id "polybar mybar"
 
 gaps inner 6
 gaps outer 4
