--- a/config/config/i3/config
+++ b/config/config/i3/config
@@ -145,9 +145,9 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 
 
 mode "nixbook | p powerwash | u update | s shutdown" {
-        bindsym p exec 'kitty /etc/nixbook-tile/powerwash-i3.sh'
-        bindsym u exec 'kitty /etc/nixbook-tile/update.sh'
-        bindsym s exec 'kitty /etc/nixbook-tile/update_shutdown.sh'
+        bindsym p exec 'kitty ~/.local/bin/powerwash-i3.sh'
+        bindsym u exec 'kitty ~/.local/bin/update.sh'
+        bindsym s exec 'kitty ~/.local/bin/update_shutdown.sh'
         # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
         bindsym Escape mode "default"
@@ -184,16 +184,16 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-#bar {
-#       status_command i3status
-#	separator_symbol "::"
-#  	workspace_min_width 10
-#  	padding 5px 0 0 0
-#		colors {
-#			background #272e33FF
-#			statusline #d3c6aa
-#		}
-#}
+bar {
+       status_command i3status
+	separator_symbol ":"
+  	workspace_min_width 10
+  	padding 5px 0 0 0
+		colors {
+			background #272e33FF
+			statusline #d3c6aa
+		}
+}
 
 exec_always --no-startup-id "polybar mybar"
 
