updated configs and renamed some things. using polybar now

--- a/config/config/polybar/config.ini
+++ b/config/config/polybar/config.ini
@@ -1,13 +1,16 @@
-; based on https://wiki.gentoo.org/wiki/Polybar
+; based on https://wiki.gentoo.org/wiki/Polybar as starting point
 [bar/mybar]
-modules-left = i3
-modules-right = lan wlan filesystem cpu date
+modules-left = i3 
+modules-right = filesystem cpu memory wlan pulseaudio date tray
+font-0 = JetBrainsMono Nerd Font,JetBrainsMono NF,JetBrainsMono NF Light:style=Light,Regular:size=8;2
+font-1 = Font Awesome 6 Free,Font Awesome 6 Free Solid:style=Solid:size=8;2
+font-2 = Symbols Nerd Font Mono:style=Regular:size=10;2
+font-3 = DejaVu Sans:size=8;2
 
-font-0 = Noto Sans Mono:style=Regular
 
 [module/tray]
 type = internal/tray
-tray-position = right
+tray-position = center
 format-margin = 8px
 tray-spacing = 8px
 
@@ -22,33 +25,56 @@ green = #0f0
 [module/date]
 type = internal/date
 ;interval = 1
-date = " | %d-%h-%y %H:%M:%"
+date = " %d-%h-%y %H:%M "
 
+
+[module/i3]
+type = internal/i3
+label-focused = %index%
+label-focused-background = ${colors.darkgrey}
+label-focused-foreground = ${colors.white}
+label-focused-underline= ${colors.white}
+label-focused-padding = 2
+label-unfocused = %index%
+label-unfocused-foreground = ${colors.grey}
+label-unfocused-padding = 2
+label-urgent = %index%
+label-urgent-foreground = ${colors.white}
+label-urgent-background = ${colors.red}
+label-urgent-padding = 2
+
+; -------------------
 [module/filesystem]
 type = internal/fs
+spacing = 1
 interval = 60
 mount-0 = /
 label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
+label-mounted-padding = 1
 
 [module/lan]
 type = internal/network
-; change interface to your network interface name
 interface = eth0
-label-connected = "%ifname%: %local_ip% %local_ip6% | "
-;label-disconnected = "%ifname%: not connected | "
+label-connected = " %ifname%: %local_ip% "
+label-connected-padding = 2
+;label-disconnected = " %{T2}\uf1eb%{T-} %ifname%: No Net "
 
 [module/wlan]
 type = internal/network
 interface = wlan0
-label-connected = "%ifname%: %essid% %signal%%  %{F#00F000}%local_ip% %{F#F000F0}%local_ip6% %{F-} | "
-;label-disconnected = "%ifname%: not connected | "
+label-connected = " [%essid% (%signal%%)] %{F#00F000}%local_ip% %{F-} "
+label-connected-padding = 1
+label-disconnected = "[%ifname%: No WiFi]"
+label-disconnected-padding = 1
 
 [module/cpu]
 type = internal/cpu
-format = <label> <ramp-coreload>
-label = " | CPU %percentage%%"
+format =  <label> <ramp-coreload>
+label = " [CPU] %percentage%% "
+label-padding = 1
 ramp-coreload-spacing = 1
-ramp-coreload-0 = %{F#0a0}▁%{F-}
+;ramp-coreload-padding = 1
+ramp-coreload-0 = %{F#0a0} %{F-}
 ramp-coreload-1 = %{F#0a0}▂%{F-}
 ramp-coreload-2 = %{F#0a0}▃%{F-}
 ramp-coreload-3 = %{F#0a0}▄%{F-}
@@ -57,20 +83,23 @@ ramp-coreload-5 = %{F#f80}▆%{F-}
 ramp-coreload-6 = %{F#f00}▇%{F-}
 ramp-coreload-7 = %{F#f00}█%{F-}
 
-[module/i3]
-type = internal/i3
+[module/memory]
+type = internal/memory
+interval = 3
+warn-percentage = 90
+format = <label> 
+label = " [RAM]: %{F#00F000}%free%%{F-}/%total% "
+label-padding = 1
+label-warn = " [ Only %free% RAM free! ] "
+label-warn-padding = 1
 
-label-focused = %index%
-label-focused-background = ${colors.darkgrey}
-label-focused-foreground = ${colors.white}
-label-focused-underline= ${colors.primary}
-label-focused-padding = 1
-
-label-unfocused = %index%
-label-unfocused-foreground = ${colors.grey}
-label-unfocused-padding = 1
-
-label-urgent = %index%
-label-urgent-foreground = ${colors.white}
-label-urgent-background = ${colors.red}
-label-urgent-padding = 1
+[module/pulseaudio]
+type = internal/pulseaudio
+format-volume = <ramp-volume> <label-volume>
+;format-volume = %{T2}\uf028%{T-} <ramp-volume> <label-volume>
+label-muted = "[ muted ]"
+label-muted-foreground = #666
+ramp-volume-0 = 🔈
+ramp-volume-1 = 🔉
+ramp-volume-2 = 🔊
+click-right = pavucontrol
