--- a/config/config/i3/config
+++ b/config/config/i3/config
@@ -32,11 +32,10 @@ exec --no-startup-id xrandr --output Virtual-1 --mode 1920x1080
 exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
-#set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% 
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10%
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle 
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle 
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -51,9 +50,12 @@ bindsym $mod+Return exec kitty
 
 # kill focused window
 bindsym $mod+q kill
+# List of apps for multi button configs
 
-# start dmenu (a program launcher)
-bindsym $mod+d exec rofi -no-config -no-lazy-grab -show drun -modi drun -show-icons
+set $apps "rofi -no-config -no-lazy-grab -show drun -modi drun -show-icons"
+
+bindsym $mod+d exec $apps
+
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -140,33 +142,21 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 
 mode "nixbook | p powerwash | u update | s shutdown" {
-        bindsym p exec 'kitty ~/.local/bin/powerwash-i3.sh'
-        bindsym u exec 'kitty ~/.local/bin/update.sh'
-        bindsym s exec 'kitty ~/.local/bin/update_shutdown.sh'
+        bindsym p exec 'kitty /etc/nixbook-tile/powerwash-i3.sh'
+        bindsym u exec 'kitty /etc/nixbook-tile/update.sh'
+        bindsym s exec 'kitty /etc/nixbook-tile/update_shutdown.sh'
         # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
         bindsym Escape mode "default"
-        bindsym $mod+n mode "default"
 }
 
-bindsym $mod+Shift+n mode nixbook
+bindsym $mod+Shift+Escape mode "nixbook | p powerwash | u update | s shutdown"
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
-
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -177,27 +167,26 @@ mode "resize" {
         # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
         bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
 }
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
+# Start i3bar to display  workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-       status_command i3status
-	separator_symbol ":"
-  	workspace_min_width 10
-  	padding 5px 0 0 0
-		colors {
-			background #272e33FF
-			statusline #d3c6aa
-		}
-}
+#bar {
+#	status_command i3status
+#	separator_symbol ":"
+#  	workspace_min_width 10
+#  	padding 5px 0 0 0
+#	colors {
+#		background #272e33FF
+#		statusline #d3c6aa
+#	}
+#}
 
 exec_always --no-startup-id "polybar mybar"
 
-gaps inner 6
+gaps inner 4
 gaps outer 4
 
 smart_gaps on
@@ -209,13 +198,41 @@ smart_borders on
 # popups during fullscreen
 popup_during_fullscreen smart
 
-bindsym $mod+Shift+f exec thunar
-
 #vscode
-bindsym $mod+c exec code
+bindsym $mod+Insert exec code
+# apps to assign to multimedia keys, many with an XF86 prefix
+set $lock xflock4
+set $disp xfce4-display-settings
+set $xfconf xfce4-settings-manager
+set $screenshot  xfce4-screenshooter
+set $logout xfce4-session-logout
+set $task xfce4-taskmanager
+
+set $www brave
+set $files thunar
+
+
+# logout, power button should trigger this
+bindsym $mod+End exec $logout
+# taskman
+bindsym $mod+Escape exec $task
+# Files, F12
+bindsym XF86Explorer exec $files
+# Desktop manage settings, F9
+bindsym XF86Tools exec $xfconf
+# screen shoot, using print screen button
+bindsym Print exec $screenshot
+# brave, F10
+bindsym XF86Search exec $www
+#diaplay, F7
+bindsym XF86Display exec $disp
+# lock, F8
+bindsym XF86WLAN exec $lock
+# apps menu, F11
+bindsym XF86LaunchA exec $apps
 
 exec feh --bg-scale ~/.config/i3/images/nixbook.png
 #open the default browser by default
-exec brave
+exec $www
 
 for_window [all] border pixel 0
